--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.28.1",
+    "cors": "^2.8.5",
     "dot": "^1.1.3",
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
